# algorand-python-testing

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/actions/build-documentation/: action.yml
.github/workflows/: cd.yaml  ci.yaml  gh-pages.yaml  publish-devportal-docs.yml
docs/: .gitignore  _docstrings_parser.py  algopy.md  api-algopy-testing.md  api.md  api_build.py  astro.config.mjs  conf.py  coverage.md  examples.md  faq.md  glossary.md  index.md  legacy-routes.json  package.json  pnpm-lock.yaml  sidebar.config.json  usage.md
docs/_static/: custom.css
docs/scripts/: generate-examples-mdx.ts  generate-legacy-redirects.mjs
docs/sphinx/: conf.py  index.md  index.rst
docs/src/content/docs/: api.md  conftest.py  coverage.md  examples.md  index.md  index.mdx
docs/src/styles/: api-reference.css
docs/testing-guide/: arc4-types.md  avm-types.md  concepts.md  contract-testing.md  index.md  opcodes.md  signature-testing.md  state-management.md  subroutines.md  transactions.md
examples/: README.md
examples/Arc4ABIMethod/: contract.py  test_contract.py
examples/auction/: test_contract.py
examples/box/: contract.py  test_contract.py
examples/htlc_logicsig/: test_signature.py
examples/marketplace/: contract.py  test_contract.py
examples/proof_of_attendance/: contract.py  test_contract.py
examples/scratch_storage/: contract.py  test_contract.py
examples/simple_voting/: contract.py  test_contract.py
examples/zk_whitelist/: contract.py  test_contract.py
scripts/: check_stubs_cov.py  refresh_test_artifacts.py  validate_examples.py
src/_algopy_testing/: __init__.py  _itxn_loader.py  arc4.py  compiled.py  constants.py  context.py  enums.py  gtxn.py  itxn.py  itxn_loader.py  protocols.py  serialize.py  utils.py
src/_algopy_testing/_context_helpers/: __init__.py  context_storage.py  txn_context.py
src/_algopy_testing/_value_generators/: arc4.py  avm.py  txn.py
src/_algopy_testing/context_helpers/: __init__.py  context_storage.py  ledger_context.py  txn_context.py
src/_algopy_testing/decorators/: __init__.py  arc4.py  subroutine.py
src/_algopy_testing/models/: __init__.py  account.py  application.py  asset.py  contract.py  logicsig.py  template_variable.py  txn_fields.py  unsigned_builtins.py
src/_algopy_testing/op/: __init__.py  block.py  constants.py  crypto.py  global_values.py  itxn.py  misc.py  pure.py  txn.py
src/_algopy_testing/primitives/: __init__.py  array.py  biguint.py  bytes.py  fixed_bytes.py  string.py  uint64.py
src/_algopy_testing/state/: __init__.py  box.py  global_map.py  global_state.py  local_map.py  local_state.py  utils.py
src/_algopy_testing/utilities/: __init__.py  budget.py  log.py  size_of.py
src/_algopy_testing/value_generators/: __init__.py  arc4.py  avm.py  txn.py
src/algopy/: __init__.py  arc4.py  gtxn.py  itxn.py  op.py
src/algopy_testing/: __init__.py  _arc4_factory.py  _compiled.py  _context_storage.py  _itxn_loader.py  _ledger_context.py  _mutable.py  _txn_context.py  arc4.py  box.py  constants.py  context.py  enums.py  gtxn.py  itxn.py  op.py  protocols.py  utils.py
src/algopy_testing/_context_helpers/: __init__.py  _context_storage.py  _ledger_context.py  _txn_context.py  context_storage.py  ledger_context.py  txn_context.py
src/algopy_testing/_value_generators/: __init__.py  arc4.py  avm.py  txn.py
src/algopy_testing/decorators/: __init__.py  abimethod.py  arc4.py  baremethod.py  subroutine.py
src/algopy_testing/models/: __init__.py  account.py  application.py  asset.py  box.py  contract.py  gitxn.py  gtxn.py  itxn.py  logicsig.py  template_variable.py  txn.py  txn_fields.py
src/algopy_testing/op/: __init__.py  block.py  crypto.py  gitxn.py  global_values.py  itxn.py  misc.py  pure.py  txn.py
src/algopy_testing/primitives/: biguint.py  bytes.py  string.py  uint64.py
src/algopy_testing/state/: __init__.py  box.py  global_state.py  local_state.py  utils.py
src/algopy_testing/utilities/: __init__.py  budget.py  log.py
templates/: .macros.j2  CHANGELOG.md.j2
tests/: common.py  conftest.py  test_array.py  test_box.py  test_box_map.py  test_box_ref.py  test_context.py  test_miscellaneous_op.py  test_op.py
tests/arc4/: conftest.py  test_abi_call.py  test_abimethod.py  test_address.py  test_arc4_method_signature.py  test_bool.py  test_dynamic_array.py  test_dynamic_bytes.py  test_emit.py  test_encode_decode.py  test_static_array.py  test_string.py  test_struct.py  test_tuple.py  test_ufixednxm.py  test_uintn.py
tests/artifacts/AVM12/data/: Contract.approval.teal  Contract.arc56.json  ContractV0.approval.teal  ContractV0.arc56.json  ContractV1.approval.teal  (+1 more)
tests/artifacts/Arc4ABIMethod/: contract.py
tests/artifacts/Arc4PrimitiveOps/: contract.py
tests/artifacts/Arrays/: immutable.py  static_size.py  uint64.py
tests/artifacts/BoxContract/: contract.py
tests/artifacts/Contains/: contract.py
tests/artifacts/CryptoOps/: contract.py
tests/artifacts/DynamicITxnGroup/: contract.py  verifier.py
tests/artifacts/GlobalStateValidator/: contract.py
tests/artifacts/LogicSignature/: lsig_args_complex.py  lsig_args_simple.py
tests/artifacts/MiscellaneousOps/: contract.py
tests/artifacts/PrimitiveOps/: contract.py
tests/artifacts/StateMutations/: statemutations.py
tests/artifacts/StateOps/: contract.py
tests/artifacts/Tuples/: contract.py
tests/avm12/: conftest.py  test_avm12.py
tests/dynamic_itxn_group/: test_dynamic_itxn_group.py
tests/logic_signature/: test_lsig_args_complex.py  test_lsig_args_simple.py
tests/models/: test_asset.py  test_box.py  test_box_map.py  test_box_ref.py  test_contract.py  test_uenumerate.py  test_urange.py
tests/primitives/: conftest.py  test_biguint.py  test_bytes.py  test_fixed_bytes.py  test_string.py  test_uint64.py
tests/state/: conftest.py  test_global_map.py  test_global_state.py  test_local_map.py  test_local_state.py  test_mutations.py
tests/utilities/: conftest.py  test_log.py  test_size_of.py
tests/value_generators/: test_avm.py
(+167 files in other folders)
