[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algorand-python-testing"
version = "0.4.0"
description = 'Algorand Python testing library'
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [
  { name = "Algorand Foundation", email = "contact@algorand.foundation" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # ==========================================================================
    # Below is used for implementing algopy crypto ops matching AVM.
    # Versions pinned for compatibility with py-algorand-sdk pre reqs
    # https://github.com/algorand/py-algorand-sdk/blob/master/setup.py
    # ==========================================================================
    "pycryptodomex>=3.6.0,<4",
    "pynacl>=1.4.0,<2",
    "ecdsa>=0.17.0",
    "coincurve>=19.0.1",
    "algorand-python>=2.0"
]

[project.urls]
Documentation = "https://github.com/algorandfoundation/puya/tree/main/algopy_testing#README.md"
Issues = "https://github.com/algorandfoundation/puya/issues"
Source = "https://github.com/algorandfoundation/puya/tree/main/algopy_testing"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/algopy", 'src/algopy_testing', 'src/_algopy_testing']

[[tool.hatch.envs.all.matrix]]
python = ["3.12"]

# default dev environment
[tool.hatch.envs.default]
type = "virtual"
path = ".venv"
python = "3.12"
dependencies = [
    "puyapy>=3.0",
    "pytest>=7.4",
    "pytest-mock>=3.10.0",
    "pytest-xdist[psutil]>=3.3",
    "py-algorand-sdk>=2.4.0",
    "algokit-utils>=2.2.1",
    "pytest-cov>=4.1.0",
    "prettytable>=3.9.0",
    "mypy==1.10",
]

[tool.hatch.envs.default.env-vars]
COVERAGE_CORE = "sysmon"

[tool.hatch.envs.default.scripts]
refresh_test_artifacts = "python scripts/refresh_test_artifacts.py"
validate_examples = "python scripts/validate_examples.py"
check_stubs_cov = "python scripts/check_stubs_cov.py"
pre_commit = [
    "hatch run lint:fix",
    "hatch run lint:check",
    "mypy_testing",
    "hatch run examples:pre_commit",
]
check = [
    "hatch run lint:check",
    "mypy_testing",
    "hatch run examples:check",
]
# type checks algorand-python-testing code
mypy_testing = "mypy . --exclude examples"
tests = "pytest --cov=src --cov-report xml"
tests_cov = [
    "pytest --cov=src --cov-report=html",
    "python -m webbrowser -t 'file://{root:uri}/htmlcov/index.html'"
]

# isolated environments for dev tooling
[tool.hatch.envs.lint]
detached = true
path = ".venv.lint"
dependencies = [
    "black",
    "ruff==0.5.6",
    "ruff-lsp",
    "docformatter>=1.7",
    "pydoclint>=0.5.6",
]

[tool.hatch.envs.lint.scripts]
check = [
  "black --check .",
  "ruff check",
  "pydoclint --config=pyproject.toml src",
]
fix = [
  "- docformatter -i -r --black --style sphinx src",
  "black .",
  "ruff check --fix",
]
check_examples = [ 'black --check examples', 'ruff check examples']
fix_examples = [ 'black examples', 'ruff check --fix examples']

# cicd environment
[tool.hatch.envs.cicd]
path = ".venv.cicd"
dependencies = [
    "python-semantic-release>=9.8.5",
]
[tool.hatch.envs.cicd.scripts]
clean_dist = "rm -rf dist"

# docs environment
[tool.hatch.envs.docs]
path = ".venv.docs"
type = "virtual"
python = "3.12"
dependencies = [
    "sphinx>=7.2.6",
    "furo>=2024.1.29",
    "myst-parser>=2.0.0",
    "sphinx-autodoc2>=0.5.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-mermaid",
    "ipykernel",
    "pytest",
    "py-algorand-sdk",
]
# environment has algopy_testing included as an editable dependency
# however it also includes the package dependencies
# the stubs can't be in the same as the project when it is editable
# so explicitly remove them
post-install-commands = [
  "hatch run docs:pip uninstall -y algorand-python",
]

[tool.hatch.envs.docs.scripts]
test = "sphinx-build -b doctest docs docs/_build -W --keep-going -n -E"
clear = "rm -rf docs/_build"
build = "hatch run docs:clear && sphinx-build docs docs/_build -W --keep-going -n -E"
dev = "hatch run docs:test  && sphinx-autobuild docs docs/_build"

# Examples environment
[tool.hatch.envs.examples]
type = "virtual"
path = ".venv.examples"
python = "3.12"
dev-mode = true
skip-install = false
post-install-commands = [
  "hatch run examples:reload_algopy_testing",
]
dependencies = [
    "algorand-python>=1.2",
    "pytest>=7.4",
    "pytest-mock>=3.10.0",
    "pytest-xdist[psutil]>=3.3",
    "py-algorand-sdk>=2.4.0",
    "algokit-utils>=2.2.1",
    "pytest-cov>=4.1.0",
    "mypy==1.10",
]

[tool.hatch.envs.examples.scripts]
tests = "pytest examples"
reload_algopy_testing = "pip install --no-cache-dir -U -e {root:uri}"
pre_commit = [
    "hatch run lint:fix_examples",
    "hatch run mypy examples",
]
check = [
    "hatch run lint:check_examples",
    "hatch run mypy examples",
]

# tool configurations
[tool.black]
line-length = 99

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",
    "W",     # pycodestyle
    "C90",   # mccabe
    "I",     # isort
    "N",     # PEP8 naming
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "FBT",   # flake8-boolean-trap
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EXE",   # flake8-executable
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "INP",   # flake8-no-pep420
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "INT",   # flake8-gettext
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "TRY",   # tryceratops
    "PERF",  # Perflint
    "LOG",   # flake8-logging
    "RUF",   # Ruff-specific rules
]
ignore = [
    "ANN401",  # allow typing.Any, used heavily in to align with stubs
    "ANN101",  # no type for self
    "ANN102",  # no type for cls
    "SIM108",  # allow if-else in place of ternary
    "SLF001", # allow private member access, used to access context manager internally
    "PLR2004", # magic values... can't configure to ignore simple low value ints like 2
    "PLW2901", # allow updating loop value...
    "PYI025",  # I can tell the difference between set and Set thank you very much
    "UP040",   # TypeAlias -> type keyword, waiting for mypy support
    "TRY003",  # allow long exception messages in Exception constructor
    "RET503",  # false negatives when involving typing.Never, covered by mypy anyway
    "RET504",
    "RET505",  # stylistic choices for readability
    "S101",    # allow asserts    
    "C901",    # allow >10 args in a method
    "N805",    # allow using `cls` as a firstparameter name
]
unfixable = [
    "F841", # don't delete unused local variables automatically
]
[tool.ruff.lint.per-file-ignores]
"src/algopy/**" = [
    "PLC0414", # allow explicit alias
    "F401", # allow unused imports in module with stubs
    "F403"  # allow * imports in module with stubs
]
"src/**" = [
    "PT", # no pytest rules
]
"tests/**" = [
    "FBT003", # allow boolean positional arguments
    "S311", # allow using `random`
]
"src/algopy_testing/*" = ["S311"] # allow using `random` in value generators
"src/algopy_testing/models/logicsig.py" = ["ARG002"]
"scripts/**/*.py" = ["T201"]
"scripts/refresh_test_artifacts.py" = ["S603"]
"scripts/validate_examples.py" = ["S603"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true
mypy-init-return = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.mypy]
python_version = "3.12"
strict = true
untyped_calls_exclude = [
    "algosdk",
]
files = ["src", "tests", "examples"]
exclude = ["tests/artifacts"]

[[tool.mypy.overrides]]
module = [
  "tests.artifacts.*",
]
follow_imports = "skip"

[tool.pytest.ini_options]
addopts = "-n auto --cov-config=.coveragerc"
pythonpath = ['src']

# === Semantic releases config ===

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install hatch && hatch build"
commit_message = "{version}\n\n[skip ci]"
tag_format = "v{version}"
major_on_zero = true

[tool.semantic_release.branches.main]
match = "main"
prerelease_token = "beta"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "docs", "chore", "ci", "refactor"]

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*.whl"]
upload_to_vcs_release = true

[tool.semantic_release.remote.token]
env = "GITHUB_TOKEN"

[tool.pydoclint]
style = 'sphinx'
check-return-types = false
skip-checking-raises = true
arg-type-hints-in-docstring = false

[tool.docformatter]
style = "sphinx"
